[tool.poetry]
name = "customer-support-env"
version = "0.1.0"
description = "Customer Support OpenEnv RL Environment"
authors = ["Subliminal01 <your-email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
